[package]
authors = ["German Lashevich <german.lashevich@gmail.com>"]
categories = ["command-line-utilities"]
description = "Manager of one-time password generators"
documentation = "https://github.com/zebradil/rustotpony"
homepage = "https://github.com/zebradil/rustotpony"
keywords = ["totp"]
license = "MIT"
name = "rustotpony"
readme = "README.md"
repository = "https://github.com/zebradil/rustotpony"
version = "0.4.1"

[dependencies]
base32 = "0.4.0"
clap = { version = "^4.1.4", features = ["derive"] }
keyring = "^1.2.1"
totp-lite = "2.0.0"
rand = "^0.8.5"
rpassword = "^7.2.0"
rust-crypto = "0.2.36"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
dirs = "^4.0.0"

[dependencies.ctrlc]
features = ["termination"]
version = "3.2"

[profile.release]
debug = false
lto = true
opt-level = 3
panic = "abort"
