[package]
authors = ["German Lashevich <german.lashevich@gmail.com>"]
categories = ["command-line-utilities"]
description = "Manager of one-time password generators"
documentation = "https://github.com/zebradil/rustotpony"
homepage = "https://github.com/zebradil/rustotpony"
keywords = ["totp"]
license = "MIT"
name = "rustotpony"
readme = "README.md"
repository = "https://github.com/zebradil/rustotpony"
version = "0.4.1"

[dependencies]
base32 = "0.4.0"
clap = { version = "^4.4.8", features = ["derive"] }
keyring = "^2.0.5"
totp-lite = "2.0.1"
rand = "^0.8.5"
rpassword = "^7.3.1"
rust-crypto = "0.2.36"
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
dirs = "^5.0.1"

[dependencies.ctrlc]
features = ["termination"]
version = "3.4"

[profile.release]
debug = false
lto = true
opt-level = 3
panic = "abort"
